@@ -4,6 +4,7 @@
 
 Enhancements::
   * Added supported options to annotation processor
+  * Changed Parcelable implementations use CREATOR directly
 
 == Release 1.1.5 (2016-05-25)
 
